wip: torrent uploading

--- a/config.toml
+++ b/config.toml
@@ -4,3 +4,6 @@ connect_url = "sqlite://target/data/data.db"
 [auth]
 min_password_length = 6
 max_password_length = 64
+
+[storage]
+upload_path = "./uploads"
