--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2018"
 
 [dependencies]
 actix-web = "4.0.0-beta.8"
+actix-multipart = "0.4.0-beta.5"
+
+async-std = "1.10.0"
+futures = "0.3.5"
 
 lazy_static = "1.4"
 
@@ -19,8 +23,13 @@ derive_builder = "0.10"
 derive_more = "0.99"
 
 serde = "1"
+serde_derive = "1"
 serde_json = "1"
 serde_yaml = "0.8.17"
+serde_bencode = "0.2.3"
+serde_bytes = "0.11"
 
 pbkdf2 = "0.9"
 rand_core = { version = "0.6", features = ["std"] }
+
+sanitize-filename = "0.3.0"
