--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,10 @@
+[tracker]
+url = "udp://localhost:6969"
+api_url = "http://localhost:1212"
+
+[net]
+port = 3000
+
 [database]
 connect_url = "sqlite://data.db?mode=rwc"
 
