--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,6 @@ rand_core = { version = "0.6", features = ["std"] }
 sanitize-filename = "0.3.0"
 
 jsonwebtoken = "7.2.0"
+
+sha-1 = "0.9.8"
+binascii = "0.1"
