wip: torrent uploading/downloading works

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,8 @@
 [tracker]
 url = "udp://localhost:6969"
 api_url = "http://localhost:1212"
+token = "MyAccessToken"
+token_valid_seconds = 7257600 # 12 weeks
 
 [net]
 port = 3000
