--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,5 @@ sha-1 = "0.9.8"
 binascii = "0.1"
 
 reqwest = { version = "0.11.4", features = [ "json" ] }
+
+tokio = {version = "1.7", features = ["macros", "io-util", "net", "time", "rt-multi-thread", "fs", "sync", "signal"]}
