--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "torrust-index-backend"
+name = "torrust"
 version = "1.0.0"
 authors = ["Mick <mick@dutchbits.nl>", "Wesley <wesley@dutchbits.nl"]
-edition = "2021"
-
-[profile.dev.package.sqlx-macros]
-opt-level = 3
+edition = "2018"
 
 [dependencies]
 actix-web = "4.0.0-beta.8"
