--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "torrust-index-backend"
+name = "torrust"
 version = "1.0.0"
 authors = ["Mick <mick@dutchbits.nl>", "Wesley <wesley@dutchbits.nl"]
-edition = "2021"
-
-[profile.dev.package.sqlx-macros]
-opt-level = 3
+edition = "2018"
 
 [dependencies]
 actix-web = "4.0.0-beta.8"
@@ -50,3 +47,4 @@ tokio = {version = "1.7", features = ["macros", "io-util", "net", "time", "rt-mu
 
 lettre = { version = "0.10.0-rc.3", features = ["builder", "tokio1", "tokio1-rustls-tls", "smtp-transport"]}
 sailfish = "0.3.3"
+rand = "0.8.5"
