test(database): added function to run before each database test

--- a/tests/databases/docker-compose.yml
+++ b/tests/databases/docker-compose.yml
@@ -9,4 +9,4 @@ services:
     environment:
       MYSQL_ROOT_HOST: '%'
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: torrust-index
+      MYSQL_DATABASE: torrust-index_test
