--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ serde_bytes = "0.11"
 
 urlencoding = "2.1.0"
 
-pbkdf2 = "0.9"
+argon2 = "0.4.1"
 rand_core = { version = "0.6", features = ["std"] }
 
 chrono = "0.4.19"
