--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "torrust-index-backend"
 version = "2.0.0-dev.1"
 authors = ["Mick van Dijke <mick@dutchbits.nl>", "Wesley Bijleveld <wesley@dutchbits.nl>"]
 edition = "2021"
+default-run = "main"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
