--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,13 +34,16 @@ jsonwebtoken = "8.1.1"
 sha-1 = "0.10.0"
 reqwest = { version = "0.11.4", features = [ "json" ] }
 tokio = {version = "1.13", features = ["macros", "io-util", "net", "time", "rt-multi-thread", "fs", "sync", "signal"]}
-lettre = { version = "0.10.0-rc.3", features = ["builder", "tokio1", "tokio1-rustls-tls", "smtp-transport"]}
+lettre = { version = "0.10.0-rc.3", features = ["builder", "tokio1", "tokio1-native-tls", "smtp-transport"]}
 sailfish = "0.4.0"
 regex = "1.6.0"
 pbkdf2 = "0.11.0"
 text-colorizer = "1.0.0"
 log = "0.4.17"
 fern = "0.6.2"
+bytes = "1.3.0"
+indexmap = "1.9.2"
+once_cell = "1.17.1"
 
 [dev-dependencies]
 rand = "0.8.5"
