--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ fern = "0.6.2"
 bytes = "1.3.0"
 indexmap = "1.9.2"
 once_cell = "1.17.1"
+text-to-png = "0.2.0"
 
 [dev-dependencies]
 rand = "0.8.5"
