--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ actix-cors = "0.6.0-beta.2"
 async-trait = "0.1.52"
 futures = "0.3.5"
 sqlx = { version = "0.6.1", features = [ "runtime-tokio-native-tls", "sqlite", "mysql", "migrate", "time" ] }
-config = "0.11"
+config = "0.13"
 toml = "0.5"
 derive_more = "0.99"
 serde = { version = "1.0", features = ["rc"] }
@@ -36,3 +36,5 @@ sailfish = "0.4.0"
 regex = "1.6.0"
 pbkdf2 = "0.11.0"
 text-colorizer = "1.0.0"
+log = "0.4.17"
+fern = "0.6.2"
