tests: e2e tests scaffolding

--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ TORRUST_IDX_BACK_CONFIG=
 TORRUST_IDX_BACK_USER_UID=1000
 TORRUST_TRACKER_CONFIG=
 TORRUST_TRACKER_USER_UID=1000
+TORRUST_TRACKER_API_TOKEN=MyAccessToken
