--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,6 +1,6 @@
 name: Development Checks
 
-on: [push,pull_request]
+on: [push, pull_request]
 
 jobs:
   run:
@@ -14,27 +14,16 @@ jobs:
           components: rustfmt, clippy
       - uses: Swatinem/rust-cache@v2
       - name: Format
-        uses: ClementTsang/cargo-action@main
-        with:
-          command: fmt
-          args: --all --check
+        run: cargo fmt --all --check
       - name: Check
-        uses: ClementTsang/cargo-action@main
-        with:
-          command: check
-          args: --all-targets
+        run: cargo check --all-targets
       - name: Clippy
-        uses: ClementTsang/cargo-action@main
-        with:
-          command: clippy
-          args: --all-targets
-      - name: Build
-        uses: ClementTsang/cargo-action@main
-        with:
-          command: build
-          args: --all-targets
-      - name: Test
-        uses: ClementTsang/cargo-action@main
-        with:
-          command: test
-          args: --all-targets
+        run: cargo clippy --all-targets
+      - name: Unit and integration tests
+        run: cargo test --all-targets
+      - uses: taiki-e/install-action@cargo-llvm-cov
+      - uses: taiki-e/install-action@nextest
+      - name: Test Coverage
+        run: cargo llvm-cov nextest        
+      - name: E2E Tests
+        run: ./docker/bin/run-e2e-tests.sh
