--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ rand_core = { version = "0.6", features = ["std"] }
 chrono = "0.4.19"
 jsonwebtoken = "8.1.1"
 sha-1 = "0.10.0"
-reqwest = { version = "0.11.4", features = [ "json" ] }
+reqwest = { version = "0.11.4", features = [ "json", "multipart" ] }
 tokio = {version = "1.13", features = ["macros", "io-util", "net", "time", "rt-multi-thread", "fs", "sync", "signal"]}
 lettre = { version = "0.10.0-rc.3", features = ["builder", "tokio1", "tokio1-rustls-tls", "smtp-transport"]}
 sailfish = "0.4.0"
