--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ serde_json = "1"
 serde_bencode = "0.2.3"
 serde_bytes = "0.11"
 urlencoding = "2.1.0"
-argon2 = "0.4.1"
+argon2 = "0.5"
 rand_core = { version = "0.6", features = ["std"] }
 chrono = "0.4.19"
 jsonwebtoken = "8.1.1"
@@ -37,7 +37,7 @@ tokio = {version = "1.13", features = ["macros", "io-util", "net", "time", "rt-m
 lettre = { version = "0.10.0-rc.3", features = ["builder", "tokio1", "tokio1-rustls-tls", "smtp-transport"]}
 sailfish = "0.4.0"
 regex = "1.6.0"
-pbkdf2 = "0.11.0"
+pbkdf2 = { version = "0.12", features = ["simple"] }
 text-colorizer = "1.0.0"
 log = "0.4.17"
 fern = "0.6.2"
