--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ jsonwebtoken = "8.1.1"
 sha-1 = "0.10.0"
 reqwest = { version = "0.11.4", features = [ "json", "multipart" ] }
 tokio = {version = "1.13", features = ["macros", "io-util", "net", "time", "rt-multi-thread", "fs", "sync", "signal"]}
-lettre = { version = "0.10.0-rc.3", features = ["builder", "tokio1", "tokio1-rustls-tls", "smtp-transport"]}
+lettre = { version = "0.10", features = ["builder", "tokio1", "tokio1-rustls-tls", "tokio1-native-tls", "smtp-transport"]}
 sailfish = "0.6"
 regex = "1.8"
 pbkdf2 = { version = "0.12", features = ["simple"] }
