refactor: [#130] configuration for E2E tests
Clean code for E2E test env configuration initialization.

And the configuration is loaded from the same config file used to start the
docker container: `config-idx-back.local.toml`.

--- a/.dockerignore
+++ b/.dockerignore
@@ -5,15 +5,15 @@
 /.github
 /.gitignore
 /.vscode
-/data_v2.db*
-/data.db*
 /bin/
-/config-idx-back.toml.local
-/config-tracker.toml.local
+/config-idx-back.local.toml
+/config-tracker.local.toml
 /config.toml
 /config.toml.local
 /cspell.json
+/data_v2.db*
 /data.db
+/data.db*
 /docker/
 /project-words.txt
 /README.md
