--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ fern = "0.6"
 bytes = "1.4"
 text-to-png = "0.2"
 indexmap = "1.9"
+thiserror = "1.0"
+binascii = "0.1"
 
 [dev-dependencies]
 rand = "0.8"
