feat: [#114] add new config section api
```toml
[api]
default_torrent_page_size = 10
max_torrent_page_size = 30
```

With pagination options for torrents.

--- a/config.local.toml
+++ b/config.local.toml
@@ -36,3 +36,7 @@ capacity = 128000000
 entry_size_limit = 4000000
 user_quota_period_seconds = 3600
 user_quota_bytes = 64000000
+
+[api]
+default_torrent_page_size = 10
+max_torrent_page_size = 30
