--- a/.dockerignore
+++ b/.dockerignore
@@ -8,8 +8,8 @@
 /bin/
 /config-idx-back.local.toml
 /config-tracker.local.toml
+/config.local.toml
 /config.toml
-/config.toml.local
 /cspell.json
 /data_v2.db*
 /data.db
