feat: enable pedantic clippy on CI

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Check
         run: cargo check --all-targets
       - name: Clippy
-        run: cargo clippy --all-targets
+        run: cargo clippy --all-targets -- -D clippy::pedantic
       - name: Install torrent edition tool (needed for testing)
         run: cargo install imdl
       - name: Unit and integration tests
