feat: add env var CARGO_INCREMENTAL before running clippy
The command:

```
cargo clippy --all-targets -- -D clippy::pedantic
```

shows more errors when the CARGO_INCREMENTAL env var is 0.

For unknown reason.

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -18,7 +18,9 @@ jobs:
       - name: Check
         run: cargo check --all-targets
       - name: Clippy
-        run: cargo clippy --all-targets -- -D clippy::pedantic
+        run: cargo clippy --version && cargo clippy --all-targets -- -D clippy::pedantic
+        env:
+          CARGO_INCREMENTAL: 0
       - name: Install torrent edition tool (needed for testing)
         run: cargo install imdl
       - name: Unit and integration tests
