--- a/config-idx-back.local.toml
+++ b/config-idx-back.local.toml
@@ -20,7 +20,6 @@ secret_key = "MaxVerstappenWC2021"
 [database]
 connect_url = "sqlite://storage/database/torrust_index_backend_e2e_testing.db?mode=rwc" # SQLite
 #connect_url = "mysql://root:root_secret_password@mysql:3306/torrust_index_backend" # MySQL
-torrent_info_update_interval = 3600
 
 [mail]
 email_verification_enabled = false
@@ -42,3 +41,5 @@ user_quota_bytes = 64000000
 default_torrent_page_size = 10
 max_torrent_page_size = 30
 
+[tracker_statistics_importer]
+torrent_info_update_interval = 3600
