feat: release 2.0.0-alpha.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "torrust-index-backend"
-version = "2.0.0-dev.1"
+description = "The backend (API) for the Torrust Index project."
+license-file = "COPYRIGHT"
+version = "2.0.0-alpha.1"
 authors = ["Mick van Dijke <mick@dutchbits.nl>", "Wesley Bijleveld <wesley@dutchbits.nl>"]
+repository = "https://github.com/torrust/torrust-index-backend"
 edition = "2021"
 default-run = "main"
 
