ci: install imdl binary
Unit tests have a dependency with the binary: `imdl`.
It's used to create and parse torrents.
Before running tests with `cargo test` you have to install with: `cargo install imdl`.

--- a/.github/workflows/publish_docker_image.yml
+++ b/.github/workflows/publish_docker_image.yml
@@ -35,6 +35,8 @@ jobs:
           toolchain: stable
           components: llvm-tools-preview
       - uses: Swatinem/rust-cache@v2
+      - name: Install torrent edition tool (needed for testing)
+        run: cargo install imdl      
       - name: Run Tests
         run: cargo test
 
