feat(api): [#174] new cargo dependencies: axum, hyper
We decided to migrate from Actix Web to Axum. The main reason was we are
also using Axum on the Tracker and it will be easier for us to mantain
only one framework. And apparently there are no drawbacks.

This commit adds the new dependencies.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,8 @@ text-to-png = "0.2"
 indexmap = "1.9"
 thiserror = "1.0"
 binascii = "0.1"
+axum = "0.6.18"
+hyper = "0.14.26"
 
 [dev-dependencies]
 rand = "0.8"
