--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -31,3 +31,5 @@ jobs:
         run: cargo llvm-cov nextest
       - name: E2E Tests
         run: ./docker/bin/run-e2e-tests.sh
+        env:
+          TORRUST_IDX_BACK_E2E_EXCLUDE_AXUM_IMPL: "true"
