--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ thiserror = "1.0"
 binascii = "0.1"
 axum = "0.6.18"
 hyper = "0.14.26"
+tower-http = { version = "0.4.0", features = ["cors"]}
 
 [dev-dependencies]
 rand = "0.8"
