--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ text-to-png = "0.2"
 indexmap = "1.9"
 thiserror = "1.0"
 binascii = "0.1"
-axum = "0.6.18"
+axum = { version = "0.6.18", features = ["multipart"]}
 hyper = "0.14.26"
 tower-http = { version = "0.4.0", features = ["cors"]}
 
