--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,10 @@ name = "torrust-index-backend"
 description = "The backend (API) for the Torrust Index project."
 license-file = "COPYRIGHT"
 version = "2.0.0-alpha.2"
-authors = ["Mick van Dijke <mick@dutchbits.nl>", "Wesley Bijleveld <wesley@dutchbits.nl>"]
+authors = [
+    "Mick van Dijke <mick@dutchbits.nl>",
+    "Wesley Bijleveld <wesley@dutchbits.nl>",
+]
 repository = "https://github.com/torrust/torrust-index-backend"
 edition = "2021"
 default-run = "main"
@@ -17,7 +20,13 @@ actix-multipart = "0.6"
 actix-cors = "0.6"
 async-trait = "0.1"
 futures = "0.3"
-sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "sqlite", "mysql", "migrate", "time" ] }
+sqlx = { version = "0.6", features = [
+    "runtime-tokio-native-tls",
+    "sqlite",
+    "mysql",
+    "migrate",
+    "time",
+] }
 config = "0.13"
 toml = "0.7"
 derive_more = "0.99"
@@ -32,9 +41,24 @@ rand_core = { version = "0.6", features = ["std"] }
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 jsonwebtoken = "8.3"
 sha-1 = "0.10"
-reqwest = { version = "0.11", features = [ "json", "multipart" ] }
-tokio = {version = "1.28", features = ["macros", "io-util", "net", "time", "rt-multi-thread", "fs", "sync", "signal"]}
-lettre = { version = "0.10", features = ["builder", "tokio1", "tokio1-rustls-tls", "tokio1-native-tls", "smtp-transport"]}
+reqwest = { version = "0.11", features = ["json", "multipart"] }
+tokio = { version = "1.28", features = [
+    "macros",
+    "io-util",
+    "net",
+    "time",
+    "rt-multi-thread",
+    "fs",
+    "sync",
+    "signal",
+] }
+lettre = { version = "0.10", features = [
+    "builder",
+    "tokio1",
+    "tokio1-rustls-tls",
+    "tokio1-native-tls",
+    "smtp-transport",
+] }
 sailfish = "0.6"
 regex = "1.8"
 pbkdf2 = { version = "0.12", features = ["simple"] }
@@ -46,12 +70,12 @@ text-to-png = "0.2"
 indexmap = "1.9"
 thiserror = "1.0"
 binascii = "0.1"
-axum = { version = "0.6.18", features = ["multipart"]}
+axum = { version = "0.6.18", features = ["multipart"] }
 hyper = "0.14.26"
-tower-http = { version = "0.4.0", features = ["cors"]}
+tower-http = { version = "0.4.0", features = ["cors"] }
 
 [dev-dependencies]
 rand = "0.8"
 tempfile = "3.5"
-uuid = { version = "1.3", features = [ "v4"] }
+uuid = { version = "1.3", features = ["v4"] }
 which = "4.4"
