--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ binascii = "0.1"
 axum = { version = "0.6.18", features = ["multipart"] }
 hyper = "0.14.26"
 tower-http = { version = "0.4.0", features = ["cors"] }
+email_address = "0.2.4"
 
 [dev-dependencies]
 rand = "0.8"
