ci: fix cargo publish command
Copy/paste error. The command to publish crates wsa copied from the
Tracker which has more than one package (cargo workspace).

--- a/.github/workflows/publish_crate.yml
+++ b/.github/workflows/publish_crate.yml
@@ -49,11 +49,6 @@ jobs:
           toolchain: stable
 
       - name: Publish workspace packages
-        run: |
-          cargo publish -p torrust-tracker-located-error
-          cargo publish -p torrust-tracker-primitives
-          cargo publish -p torrust-tracker-configuration
-          cargo publish -p torrust-tracker-test-helpers
-          cargo publish -p torrust-tracker
+        run: cargo publish
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CRATES_TOKEN }}
