--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,8 @@ axum = { version = "0.6.18", features = ["multipart"] }
 hyper = "0.14.26"
 tower-http = { version = "0.4.0", features = ["cors"] }
 email_address = "0.2.4"
+hex = "0.4.3"
+uuid = { version = "1.3", features = ["v4"] }
 
 [dev-dependencies]
 rand = "0.8"
