--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -29,5 +29,7 @@ jobs:
       - uses: taiki-e/install-action@nextest
       - name: Test Coverage
         run: cargo llvm-cov nextest
-      - name: E2E Tests
+      - name: E2E Tests with SQLite
         run: ./docker/bin/run-e2e-tests.sh
+      - name: E2E Tests with MySQL
+        run: ./docker/bin/e2e/mysql/run-e2e-tests.sh
