--- a/compose.yaml
+++ b/compose.yaml
@@ -1,36 +1,19 @@
 name: torrust
 services:
 
-  idx-back:
-    build:
-      context: .
-      args:
-        RUN_AS_USER: appuser
-        UID: ${TORRUST_IDX_BACK_USER_UID:-1000}
-      target: development
-    user: ${TORRUST_IDX_BACK_USER_UID:-1000}:${TORRUST_IDX_BACK_USER_UID:-1000}
+  index-back:
+    image: torrust-index-backend:local
     tty: true
     environment:
       - TORRUST_IDX_BACK_CONFIG=${TORRUST_IDX_BACK_CONFIG}
+      - TORRUST_IDX_BACK_CORS_PERMISSIVE=true
       - CARGO_HOME=/home/appuser/.cargo
     networks:
       - server_side
     ports:
       - 3001:3001
-    # todo: implement healthcheck
-    #healthcheck:
-    #  test:
-    #    [
-    #      "CMD-SHELL",
-    #      "cargo run healthcheck"
-    #    ]
-    #  interval: 10s
-    #  retries: 5
-    #  start_period: 10s
-    #  timeout: 3s
     volumes:
-      - ./:/app
-      - ~/.cargo:/home/appuser/.cargo
+      - ./storage:/app/storage    
     depends_on:
       - tracker
       - mailcatcher
@@ -38,7 +21,6 @@ services:
 
   tracker:
     image: torrust/tracker:develop
-    user: ${TORRUST_TRACKER_USER_UID:-1000}:${TORRUST_TRACKER_USER_UID:-1000}
     tty: true
     environment:
       - TORRUST_TRACKER_CONFIG=${TORRUST_TRACKER_CONFIG}
@@ -48,17 +30,6 @@ services:
     ports:
       - 6969:6969/udp
       - 1212:1212/tcp
-    # todo: implement healthcheck
-    #healthcheck:
-    #  test:
-    #    [
-    #      "CMD-SHELL",
-    #      "/app/main healthcheck"
-    #    ]
-    #  interval: 10s
-    #  retries: 5
-    #  start_period: 10s
-    #  timeout: 3s
     volumes:
       - ./storage:/app/storage
     depends_on:
