--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
-DATABASE_URL=sqlite://storage/database/data.db?mode=rwc
-TORRUST_IDX_BACK_CONFIG=
-TORRUST_IDX_BACK_USER_UID=1000
+DATABASE_URL=sqlite:///var/lib/torrust/database/data.db?mode=rwc
+TORRUST_INDEX_CONFIG=
+USER_UID=1000
 TORRUST_TRACKER_CONFIG=
 TORRUST_TRACKER_USER_UID=1000
 TORRUST_TRACKER_API_TOKEN=MyAccessToken
