--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,7 +72,7 @@ thiserror = "1.0"
 binascii = "0.1"
 axum = { version = "0.6.18", features = ["multipart"] }
 hyper = "0.14.26"
-tower-http = { version = "0.4.0", features = ["cors"] }
+tower-http = { version = "0.4.0", features = ["cors", "compression-full"] }
 email_address = "0.2.4"
 hex = "0.4.3"
 uuid = { version = "1.3", features = ["v4"] }
