--- a/compose.yaml
+++ b/compose.yaml
@@ -38,29 +38,21 @@ services:
 
   tracker:
     image: torrust/tracker:develop
-    user: ${TORRUST_TRACKER_USER_UID:-1000}:${TORRUST_TRACKER_USER_UID:-1000}
     tty: true
     environment:
       - TORRUST_TRACKER_CONFIG=${TORRUST_TRACKER_CONFIG}
-      - TORRUST_TRACKER_API_TOKEN=${TORRUST_TRACKER_API_TOKEN:-MyAccessToken}
+      - TORRUST_TRACKER_DATABASE=${TORRUST_TRACKER_DATABASE:-sqlite3}
+      - TORRUST_TRACKER_API_ADMIN_TOKEN=${TORRUST_TRACKER_API_ADMIN_TOKEN:-MyAccessToken}
     networks:
       - server_side
     ports:
       - 6969:6969/udp
-      - 1212:1212/tcp
-    # todo: implement healthcheck
-    #healthcheck:
-    #  test:
-    #    [
-    #      "CMD-SHELL",
-    #      "/app/main healthcheck"
-    #    ]
-    #  interval: 10s
-    #  retries: 5
-    #  start_period: 10s
-    #  timeout: 3s
+      - 7070:7070
+      - 1212:1212
     volumes:
-      - ./storage:/app/storage
+      - ./storage/tracker/lib:/var/lib/torrust/tracker:Z
+      - ./storage/tracker/log:/var/log/torrust/tracker:Z
+      - ./storage/tracker/etc:/etc/torrust/tracker:Z
     depends_on:
       - mysql
 
