various: change name to `torrust-index`
small changes included:
- move to deployment workflow
- move copyright to readme
- remove common license files

--- a/.github/workflows/publish_docker_image.yaml
+++ b/.github/workflows/publish_docker_image.yaml
@@ -54,7 +54,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            # For example: torrust/index-backend
+            # For example: torrust/index
             "${{ secrets.DOCKER_HUB_USERNAME }}/${{secrets.DOCKER_HUB_REPOSITORY_NAME }}"
           tags: |
             type=ref,event=branch
