--- a/.github/workflows/labels.yaml
+++ b/.github/workflows/labels.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - id: sync
         name: Apply Labels from File
-        uses: EndBug/label-sync@v2
+        uses: EndBug/label-sync@da00f2c11fdb78e4fae44adac2fdd713778ea3e8
         with:
           config-file: .github/labels.json
           delete-other-labels: true
