--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,33 @@
 [package]
-name = "torrust-index-backend"
-description = "The backend (API) for the Torrust Index project."
-license-file = "COPYRIGHT"
-version = "2.0.0-alpha.3"
-authors = [
-    "Mick van Dijke <mick@dutchbits.nl>",
-    "Wesley Bijleveld <wesley@dutchbits.nl>",
-]
-repository = "https://github.com/torrust/torrust-index-backend"
-edition = "2021"
+name = "torrust-index"
+readme = "README.md"
 default-run = "main"
+
+authors.workspace = true
+description.workspace = true
+documentation.workspace = true
+edition.workspace = true
+homepage.workspace = true
+keywords.workspace = true
+license.workspace = true
+publish.workspace = true
+repository.workspace = true
+rust-version.workspace = true
+version.workspace = true
+
+[workspace.package]
+authors = ["Nautilus Cyberneering <info@nautilus-cyberneering.de>, Mick van Dijke <mick@dutchbits.nl>"]
+categories = ["network-programming", "web-programming"]
+description = "A BitTorrent Index"
+documentation = "https://docs.rs/crate/torrust-tracker/"
+edition = "2021"
+homepage = "https://torrust.com/"
+keywords = ["bittorrent", "file-sharing", "peer-to-peer", "torrent", "index"]
+license = "AGPL-3.0-only"
+publish = true
+repository = "https://github.com/torrust/torrust-tracker"
+rust-version = "1.72"
+version = "3.0.0-alpha.1-develop"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
