ci: avoid rust `cargo check` bug

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -55,13 +55,14 @@ jobs:
         name: Install Intermodal
         run: cargo install imdl
 
-      - id: check
-        name: Run Build Checks
-        run: cargo check --workspace --all-targets --all-features
+      # Temporary Disabled to avoid Rust Compiler Bug
+      # - id: check
+      #   name: Run Build Checks
+      #   run: cargo check --tests --benches --examples --workspace --all-targets --all-features
 
       - id: test
         name: Run Unit Tests
-        run: cargo test --workspace --all-targets --all-features
+        run: cargo test --tests --benches --examples --workspace --all-targets --all-features
 
       - id: coverage
         name: Generate Coverage Report
