--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
+default-run = "main"
 name = "torrust-index"
 readme = "README.md"
-default-run = "main"
 
 authors.workspace = true
 description.workspace = true
@@ -16,15 +16,13 @@ rust-version.workspace = true
 version.workspace = true
 
 [workspace.package]
-authors = [
-    "Nautilus Cyberneering <info@nautilus-cyberneering.de>, Mick van Dijke <mick@dutchbits.nl>",
-]
+authors = ["Nautilus Cyberneering <info@nautilus-cyberneering.de>, Mick van Dijke <mick@dutchbits.nl>"]
 categories = ["network-programming", "web-programming"]
 description = "A BitTorrent Index"
 documentation = "https://docs.rs/crate/torrust-tracker/"
 edition = "2021"
 homepage = "https://torrust.com/"
-keywords = ["bittorrent", "file-sharing", "peer-to-peer", "torrent", "index"]
+keywords = ["bittorrent", "file-sharing", "index", "peer-to-peer", "torrent"]
 license = "AGPL-3.0-only"
 publish = true
 repository = "https://github.com/torrust/torrust-tracker"
@@ -35,65 +33,44 @@ version = "3.0.0-alpha.1-develop"
 opt-level = 3
 
 [dependencies]
+argon2 = "0"
 async-trait = "0"
-futures = "0"
-sqlx = { version = "0", features = [
-    "runtime-tokio-native-tls",
-    "sqlite",
-    "mysql",
-    "migrate",
-    "time",
-] }
+axum = { version = "0", features = ["multipart"] }
+binascii = "0"
+bytes = "1"
+chrono = { version = "0", default-features = false, features = ["clock"] }
 config = "0"
-toml = "0"
 derive_more = "0"
+email_address = "0"
+fern = "0"
+futures = "0"
+hex = "0"
+hyper = "0"
+indexmap = "1"
+jsonwebtoken = "8"
+lazy_static = "1.4.0"
+lettre = { version = "0", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls", "tokio1-rustls-tls"] }
+log = "0"
+pbkdf2 = { version = "0", features = ["simple"] }
+rand_core = { version = "0", features = ["std"] }
+regex = "1"
+reqwest = { version = "0", features = ["json", "multipart"] }
 serde = { version = "1", features = ["rc"] }
-serde_derive = "1"
-serde_json = "1"
 serde_bencode = "0"
 serde_bytes = "0"
-urlencoding = "2"
-argon2 = "0"
-rand_core = { version = "0", features = ["std"] }
-chrono = { version = "0", default-features = false, features = ["clock"] }
-jsonwebtoken = "8"
+serde_derive = "1"
+serde_json = "1"
 sha-1 = "0"
-reqwest = { version = "0", features = ["json", "multipart"] }
-tokio = { version = "1", features = [
-    "macros",
-    "io-util",
-    "net",
-    "time",
-    "rt-multi-thread",
-    "fs",
-    "sync",
-    "signal",
-] }
-lettre = { version = "0", features = [
-    "builder",
-    "tokio1",
-    "tokio1-rustls-tls",
-    "tokio1-native-tls",
-    "smtp-transport",
-] }
+sqlx = { version = "0", features = ["migrate", "mysql", "runtime-tokio-native-tls", "sqlite", "time"] }
 tera = { version = "1", default-features = false }
-regex = "1"
-pbkdf2 = { version = "0", features = ["simple"] }
 text-colorizer = "1"
-log = "0"
-fern = "0"
-bytes = "1"
 text-to-png = "0"
-indexmap = "1"
 thiserror = "1"
-binascii = "0"
-axum = { version = "0", features = ["multipart"] }
-hyper = "0"
-tower-http = { version = "0", features = ["cors", "compression-full"] }
-email_address = "0"
-hex = "0"
+tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
+toml = "0"
+tower-http = { version = "0", features = ["compression-full", "cors"] }
+urlencoding = "2"
 uuid = { version = "1", features = ["v4"] }
-lazy_static = "1.4.0"
 
 [dev-dependencies]
 rand = "0"
